<?xml version="1.0" encoding="utf-8"?>
<!--
    Copyright (c) 2014 Nokia Corporation.
    See the license text file delivered with this project for more information. 
-->
<resources>
    <string name="app_name">Capture The Flag</string>
    <string name="action_settings">Settings</string>
    <string name="gps_not_enabled">GPS Service is not enabled. Do you want to open system settings?</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="new_game">New game</string>
    <string name="start_a_new_game">Start a new game</string>
    <string name="join_game">Join game</string>
    <string name="type_your_name">Type your name</string>
    <string name="choose_side">Choose your side:</string>
    <string name="red_team">Red team</string>
    <string name="blue_team">Blue team</string>
    <string name="buy_premium">Buy Premium</string>
    <string name="help">Help</string>
    <string name="about">About</string>
    <string name="server_settings">Server settings</string>
    <string name="name_game">Name your game</string>
    <string name="start_game">Start the game</string>
    <string name="thank_you">Thank you for playing Capture the Flag!</string>
    <string name="upgrade_info">Upgrade your app to premium version and play with friends.With premium version there is no player limit.</string>
    <string name="upgrade">Upgrade</string>
    <string name="fetching_price">Fetching price</string>
    <string name="premium_note">This is a two player game. Upgrade to premium to include more players.</string>
    <string name="you_are_at">You are at </string>
    <string name="finding_location">Finding your location</string>
    <string name="game_full">Game is full.</string>
    <string name="game_paused">Game paused</string>
    <string name="drop_out">Drop out</string>
    <string name="resume_game">Resume game</string>
    <string name="invalid_name">Invalid name</string>
    <string name="connected_to_server">Connected to game server</string>
    <string name="not_connected_to_server">Not connected to game server</string>
    <string name="new_game_is_offline">NOTE: This game will be offline because there is no connection to the server</string>
    <string name="no_street_address">No street address for location</string>
    <string name="no_location">No location</string>
    <string name="location_required_to_start">Location is required in order to start or join a game.</string>
    <string name="player">Player</string>
    <string name="joined">joined</string>
    <string name="game">Game</string>
    <string name="help_text">
        <b>Instructions</b>\n\n

To play, create a game or join an existing one. A server is required to play the
online game <i>and it is not provided by Nokia</i>. See the documentation in
GitHub (link available on about page) how to set up the server.\n\n

If the app does not find the server, the game will function in offline mode:
When a game is created, the virtual opponent, <i>WIMP</i>, will start to
advance towards your flag.\n\n

To have more than one person per team you need to purchase the premium version
but don\'t worry; since this is an example application, the premium version is
free or charge.
    </string>
    <string name="about_text">
        <b>Version 1.0</b>\n\n

Capture the Flag is a Nokia example application demonstrating the use
of Nokia services on Nokia X software platform: HERE Maps, Nokia Notifications
and Nokia In-App Payment.\n\n

The app itself is based on the traditional outdoor game where two teams each
have their own flags, which the opposing team then tries to capture. The flags
in the game are randomly placed on the map within a fixed distance of the player
creating the game. The team who manages to get to the flag of the opposing team
first wins.\n\n

This demo application is hosted in GitHub where you can find the
source code and documentation of the latest release:
    </string>
    <string name="github_url">https://github.com/nokia-developer/capture-the-flag</string>
    <string name="server_settings_dialog_info">Enter server URL and port in form "url:port"</string>
    <string name="server_url_and_port_hint_text">Server URL and port</string>
</resources>
