<!--
    Copyright (c) 2014 Microsoft Mobile and/or its subsidiary(-ies).
    See the license text file delivered with this project for more information.
-->
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <!-- <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>
    -->

    <item 
        android:id="@+id/buy_premium_menuitem"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:icon="@drawable/shopping_cart_icon"
        android:title="@string/buy_premium" />

    <item
        android:id="@+id/help_menuitem"
        android:orderInCategory="97"
        android:showAsAction="never"
        android:icon="@drawable/ic_action_help"
        android:title="@string/help" />

    <item 
        android:id="@+id/about_menuitem"
        android:orderInCategory="98"
        android:showAsAction="never"
        android:icon="@drawable/ic_action_about"
        android:title="@string/about" />

    <item 
        android:id="@+id/server_settings_menuitem"
        android:orderInCategory="99"
        android:showAsAction="never"
        android:icon="@drawable/ic_action_settings"
        android:title="@string/server_settings" />

</menu>
