<?xml version="1.0" encoding="utf-8"?>
<!--
    Copyright (c) 2014 Nokia Corporation and/or its subsidiary(-ies).
    See the license text file delivered with this project for more information.
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/fragment_base_background_color"
    android:orientation="vertical">

    <TextView 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/thank_you"
        android:layout_marginBottom="@dimen/activity_vertical_margin" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:text="@string/upgrade_info" />

    <TextView
        android:id="@+id/premium_price_line"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/fetching_price" />
    
    <Button android:id="@+id/buy_premium"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/upgrade" />

</LinearLayout>
